[gd_scene load_steps=3 format=2]

[ext_resource path="res://PreGameHUDRelated/PreGameScreen.gd" type="Script" id=1]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/BackButtonStandard/PlayerGUI_BackButtonStandard.tscn" type="PackedScene" id=2]

[node name="PreGameScreen" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 960, 540 )
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContentPanel" type="MarginContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="BackButton" parent="." instance=ExtResource( 2 )]
margin_left = 935.0
margin_right = 960.0
margin_bottom = 25.0
size_flags_horizontal = 10
size_flags_vertical = 2
custom_constants/margin_right = 6
custom_constants/margin_top = 6

[connection signal="on_button_released_with_button_left" from="BackButton" to="." method="_on_BackButton_on_button_released_with_button_left"]
